<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/menu_item_sort">
<menu >

            <group android:checkableBehavior="single" >

                <item
                    android:id="@+id/menu_item_sort_by_views"
                    android:checked="true"
                    android:title="@string/menu_item_sort_by_views"/>

                <item
                    android:id="@+id/menu_item_sort_by_comments"
                    android:title="@string/menu_item_sort_by_comments"/>

                <item
                    android:id="@+id/menu_item_sort_by_favs"
                    android:title="@string/menu_item_sort_by_favs"/>
            </group>
        </menu></item>

</menu>