<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:padding="5dp" android:orientation="vertical"
	android:layout_width="match_parent" android:layout_height="match_parent">
	<TextView android:layout_width="fill_parent" android:padding="20dp"
		android:layout_height="wrap_content" android:singleLine="false"
		android:text="@string/add_photo_to_pool_hint" />
	<ProgressBar android:layout_width="fill_parent"
		android:layout_marginLeft="20dp" android:layout_marginRight="20dp"
		style="?android:attr/progressBarStyleHorizontal" android:id="@+id/progressBar1"
		android:layout_height="wrap_content"></ProgressBar>
	<TextView android:id="@+id/process_msg" android:layout_width="fill_parent"
		android:text="@string/click_begin_to_start" android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp" android:layout_height="wrap_content" />
	<CheckBox android:id="@+id/cb_donot_show"
		android:layout_height="wrap_content" android:layout_marginLeft="10dp"
		android:layout_marginRight="20dp" android:layout_marginBottom="10dp"
		android:layout_width="fill_parent" android:text="@string/add_to_pool_auto_begin" />
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<Button android:id="@+id/begin_btn" android:layout_width="0dp"
			android:text="@string/begin_btn" android:layout_height="wrap_content"
			android:layout_weight="1" />
		<Button android:id="@+id/cancel_btn" android:layout_width="0dp"
			android:text="@string/cancel_btn" android:layout_height="wrap_content"
			android:layout_weight="1" />
	</LinearLayout>
</LinearLayout>
