<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:padding="5dp" android:orientation="vertical"
	android:layout_width="match_parent" android:layout_height="match_parent">
	<TextView android:layout_width="fill_parent" android:padding="20dp"
		android:layout_height="wrap_content" android:singleLine="false"
		android:text="@string/auth_hint" />
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<Button android:id="@+id/button_auth" android:layout_width="0dp"
			android:text="@string/auth_btn_title" android:layout_height="wrap_content"
			android:layout_weight="1" />
		<Button android:id="@+id/button_auth_done"
			android:layout_width="0dp" android:text="@string/auth_done_btn_title"
			android:layout_height="wrap_content" android:layout_weight="1" />
	</LinearLayout>
</LinearLayout>
