<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
	android:layout_width="match_parent" android:layout_height="match_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<FrameLayout
		android:layout_height="0dp" android:layout_weight="1"
		android:layout_width="match_parent">
		<ProgressBar android:id="@+id/progress"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_gravity="center|center" />
		<ListView android:layout_height="fill_parent" android:id="@+id/group_check_list"
			android:choiceMode="multipleChoice" android:layout_width="match_parent" />
	</FrameLayout>
	<LinearLayout android:layout_width="fill_parent"
		style="@android:style/Holo.ButtonBar" android:layout_height="wrap_content"
		android:orientation="horizontal">
		<Button android:layout_width="0dp" android:layout_height="wrap_content"
			android:id="@+id/create_btn" android:layout_weight="1" android:text="@string/new_btn"/>
		<Button android:layout_width="0dp" android:layout_height="wrap_content"
			android:id="@+id/ok_btn" android:layout_weight="1" android:text="@string/ok_btn" />
		<Button android:layout_width="0dp" android:layout_height="wrap_content"
			android:id="@+id/cancel_btn" android:layout_weight="1"
			android:text="@string/cancel_btn" />
	</LinearLayout>
</LinearLayout>
